Правки и багфиксы